# jgachine

jgachine/: AUTHORS  BUGS  CREDITS  ChangeLog  Common.mk  Makefile  Makefile.am  NEWS  README  THANKS  TODO  VERSION  bootstrap.sh  configure.ac
jgachine/config/: autogen.sh
jgachine/cross/: README  setenv
jgachine/data/: Makefile.am
jgachine/debian/: Makefile.am  README.Debian  changelog  control  control.bak  copyright  docs  jgachine.menu  rules
jgachine/doc/: Makefile.am  cross-setenv  tutorial.html
jgachine/example/: Example.java  Makefile
jgachine/libs/: README
jgachine/limbo/: README  createcvs.sh  exportcvs.sh
jgachine/limbo/benchmark/: README  Test.java
jgachine/limbo/benchmark2/: README  Test.java.cpp  runtest
jgachine/limbo/bug/: MyClassLoader.java  README  Test.java  runtest.sh
jgachine/limbo/illusion/: Hello.java  README  make.sh
jgachine/org/: Makefile.am
jgachine/org/jgachine/: .cvsignore  Color.java  JGachine.java  JGachineNative.cpp  LocalResourceLoader.java  Makefile  Makefile.am  MyClassLoader.java  MySecurityManager.java  NetResourceLoader.java  README  ResourceLoader.java
jgachine/org/jgachine/common/: error.h
jgachine/org/jgachine/dscenegraph/: AdjustColor.java  AdjustViewport.java  Border.java  Camera.java  CoordinateSystem.java  Node.java  Quad.java  README  Recolor.java  Rotate.java  Scale.java  Sprite.java  Text.java  Translate.java  Window.java
jgachine/org/jgachine/event/: DevState.java  Resize.java  Resource.java  ResourceRequest.java
jgachine/org/jgachine/input/: Makefile  Makefile.am  README  input.h
jgachine/org/jgachine/input/sdl/: Makefile  Makefile.am  input.cpp
jgachine/org/jgachine/scenegraph/: AdjustColor.java  AdjustViewport.java  Border.java  Camera.java  CoordinateSystem.java  Menu.java  Node.java  Quad.java  README  Recolor.java  Rotate.java  Scale.java  Sprite.java  Text.java  Translate.java  Window.java
jgachine/org/jgachine/signal/: Dispatcher.java  FatalException.java  README  Slot.java
jgachine/org/jgachine/timer/: Makefile  Makefile.am  time.cpp  time.h
jgachine/org/jgachine/video/: Makefile  Makefile.am  video.h
jgachine/org/jgachine/video/sdlopengl/: Makefile  Makefile.am  README  bin2hex  fontdata.h  glfont.cpp  glfont.h  sdlgl.cpp  sdlgl.h  smartptr.h  texture.cpp  texture.h  typedefs.h  video.cpp
jgachine/org/jgachine/video/sdlopengl/boost/: Makefile.am  config.hpp  smart_ptr.hpp
jgachine/scripts/: Makefile.am  jpong.in
jgachine/server/: Makefile  Makefile.am  README  Server.java  ServerThread.java
jgachine/tutorial/: Makefile  Makefile.am
jgachine/tutorial/demo/: Demo.java  Makefile.am
jgachine/tutorial/local/: README
jgachine/tutorial/networked/: Client.java  ClientState.java  Makefile.am  Pong.java  README  SceneRequest.java  Server.java  ServerThread.java  Transform.java
jgachine/tutorial/pong/: Pong1.java
jgachine/tutorial/pong1/: Makefile  Makefile.am  Pong.java
jgachine/tutorial/pong2/: Makefile.am  Pong.java
jgachine/tutorial/pong3/: Makefile.am  Pong.java
jgachine/tutorial/server/: Server.java
jgachine/vecmath/: Makefile  Makefile.am  README.jgachine
