noinst_HEADERS = \
	config.hpp type_traits.hpp utility.hpp smart_ptr.hpp \
	type_traits/alignment_traits.hpp \
	type_traits/arithmetic_traits.hpp \
	type_traits/composite_traits.hpp \
	type_traits/conversion_traits.hpp \
	type_traits/cv_traits.hpp \
	type_traits/function_traits.hpp \
	type_traits/fwd.hpp \
	type_traits/ice.hpp \
	type_traits/object_traits.hpp \
	type_traits/same_traits.hpp \
	type_traits/transform_traits.hpp \
	type_traits/transform_traits_spec.hpp \
	type_traits/type_traits_test.hpp

